--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <img src="/photo/head.jpg" width="80px" height="80px" alt="">
     </div>
     <div class="indext">
-        <a href="D:/yayar/THESIS/HML/lora.html">LORA</a><br>
-        <a href="/gps.html">GPS</a><br>
-        <a href="/raspberrypi.html">RASPBERRYPI</a><br>
-        <a href="/lora-gps.html">LORA-APPLICATION</a><br>
-        <a href="/other.html"> OTHER</a><br><br><br>
-        <a href="/other.html"> CONTACT</a><br>
+        <a href="lora.html">LORA</a><br>
+        <a href="gps.html">GPS</a><br>
+        <a href="raspberrypi.html">RASPBERRYPI</a><br>
+        <a href="lora-gps.html">LORA-APPLICATION</a><br>
+        <a href="other.html"> OTHER</a><br><br><br>
+        <a href="other.html"> CONTACT</a><br>
     </div>
     <div class="footer">
         &copy; copyright 2020 by yayar Hsiao<br><br>
