--- a/gps.html
+++ b/gps.html
@@ -30,7 +30,7 @@
 <body>
 <div id="container">
     <div class="menu">
-        <a href="01.html">MENU</a>
+        <a href="index.html">MENU</a>
         <a href="lora.html">LORA</a>
         <a href="gps.html">GPS</a>
         <a href="lora-gps.html">LORA-application</a>
