--- a/other.html
+++ b/other.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="menu">
-        <a href="01.html">MENU</a>
+        <a href="index.html">MENU</a>
         <a href="lora.html">LORA</a>
         <a href="gps.html">GPS</a>
         <a href="lora-gps.html">LORA-application</a>
