--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="menu">
-        <a href="http://127.0.0.1:5500/01.html">MENU</a>
-        <a href="http://127.0.0.1:5500/lora.html">LORA</a>
-        <a href="http://127.0.0.1:5500/gps.html">GPS</a>
-        <a href="http://127.0.0.1:5500/lora-gps.html">LORA-application</a>
-        <a href="http://127.0.0.1:5500/raspberrypi.html">RASPBERRYPI</a>
-        <a href="http://127.0.0.1:5500/other.html">OTHER</a>
+        <a href="index.html">MENU</a>
+        <a href="lora.html">LORA</a>
+        <a href="gps.html">GPS</a>
+        <a href="lora-gps.html">LORA-application</a>
+        <a href="raspberrypi.html">RASPBERRYPI</a>
+        <a href="other.html">OTHER</a>
     </div>
     <h1>RASPBERRYPI</h1>
     
