--- a/other.html
+++ b/other.html
@@ -6,8 +6,62 @@
     <title>OTHER</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        h2{
+            padding-top: 10px;
+        }
+        .albumfirst{
+            background-color: rgba(175, 180, 111, 0.301);
+            border-radius: 10px;
+            text-align: center;
+            width: 1000px;
+            margin: auto;
+            padding-bottom: 10PX;
+        }
+        .albumsecond{
+            background-color: rgba(160, 95, 154, 0.329);
+            border-radius: 10px;
+            text-align: center;
+            width: 1000px;
+            margin: auto;
+            margin-top: 30px; 
+            padding-bottom: 10px;
+        }
+        .albumthird{
+            background-color: rgba(95, 158, 160, 0.26);
+            border-radius: 10px;
+            text-align: center;
+            width: 1000px;
+            margin: auto;
+            margin-top: 30px;
+            padding-bottom: 10px;
+        }
+
+        img{
+            margin: 5px 5px;
+            box-shadow: 5px 5px 5px rgba(117, 141, 194, 0.747);
+            opacity: 80%;
+            border-radius: 50%;
+            width: 180px;
+            height: 180px;
+        }
+        @keyframes cirtorec{
+            0%{border-radius: 50%;}
+            100%{border-radius: 0%;}
+        }
+        #num1:hover .detail{
+            display: block;
+            width: 650px;
+            height: 530px;
+        }
+        .detail{
+            display: none;
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
+<div id="container">
     <div class="menu">
         <a href="index.html">MENU</a>
         <a href="lora.html">LORA</a>
@@ -16,7 +70,97 @@
         <a href="raspberrypi.html">RASPBERRYPI</a>
         <a href="other.html">OTHER</a>
     </div>
-    <h1>OTHER</h1>
-    
+    <h1>My College Life</h1>
+    <div class="albumfirst">
+        <h2>2016</h2>
+        <h2>2015 Set 加入海洋大學帆船隊</h2>
+        <img id="num1" src="photoOther/201600.JPG" alt="">
+        <div class="detail">
+            <img src="photoOther/201600.JPG" alt="">
+            <p>這是</p>
+        </div>
+        <h2>2016 jul-Set 中國無錫太湖，山水遊艇俱樂部，小孩OP夏令營教練</h2>
+        <img src="photoOther/201601.JPG" alt="">
+        <img src="photoOther/201602.JPG" alt="">
+        <img src="photoOther/201603.JPG" alt="">
+        <img src="photoOther/201604.JPG" alt="">
+        <img src="photoOther/201605.JPG" alt="">
+        <img src="photoOther/201606.JPG" alt="">
+        <img src="photoOther/201607.JPG" alt="">
+        <img src="photoOther/201608.JPG" alt="">
+        <img src="photoOther/201609.JPG" alt="">
+        <img src="photoOther/201610.JPG" alt="">
+        <img src="photoOther/201611.JPG" alt="">
+        <img src="photoOther/201612.JPG" alt="">
+        <img src="photoOther/201614.JPG" alt="">
+        <h2>2016 Nov 第一次帆船長行，花蓮到墾丁後壁湖，歷時50小時</h2>
+        <img src="photoOther/201613.JPG" alt="">
+    </div>
+    <div class="albumsecond">
+        <h2>2017</h2>
+        <h2>2017 Mar 墾丁學習自由潛水，考自由潛水證照(AIDA2)</h2>
+        <img src="photoOther/201700.JPG" alt="">
+        <img src="photoOther/2017001.JPG" alt="">
+        <img src="photoOther/2017004.JPG" alt="">
+        <h2>2017 Apr 法國籍研究帆船TARA停靠台灣基隆港，擔任導覽人員</h2>
+        <img src="photoOther/201701.JPG" alt="">
+        <img src="photoOther/2017002.JPG" alt="">
+        <img src="photoOther/2017003.JPG" alt="">
+        <img src="photoOther/201702.JPG" alt="">
+        <img src="photoOther/201703.JPG" alt="">
+        <h2>2017 May 預計長航至澎湖，卻因為天氣惡劣，航程轉為基隆至淡水</h2>
+        <img src="photoOther/201704.JPG" alt="">
+        <img src="photoOther/201705.JPG" alt="">
+        <h2>2017 Jun 第三次長航，基隆至日本石垣島，歷時33小時</h2>
+        <img src="photoOther/201706.JPG" alt="">
+        <img src="photoOther/201707.JPG" alt="">
+        <h2>2017 Jul-Aug 日本石垣島潛店打工換宿，帶客人潛水</h2>
+        <img src="photoOther/201708.JPG" alt="">
+        <img src="photoOther/201709.JPG" alt="">
+        <img src="photoOther/201710.JPG" alt="">
+        <img src="photoOther/201711.JPG" alt="">
+        <img src="photoOther/201712.JPG" alt="">
+        <img src="photoOther/201713.JPG" alt="">
+        <img src="photoOther/201714.JPG" alt="">
+        <img src="photoOther/201715.JPG" alt="">
+        <img src="photoOther/201716.JPG" alt="">
+        <img src="photoOther/201717.JPG" alt="">
+        <img src="photoOther/201718.JPG" alt="">
+        <img src="photoOther/201719.JPG" alt="">
+        <h2>2017 Set 保養海大船隻，磨船底，上漆</h2>
+        <img src="photoOther/201720.JPG" alt="">
+        <img src="photoOther/201721.JPG" alt="">
+    </div>
+    <div class="albumthird">
+        <h2>2018</h2>
+        <h2>2018 Jan 奇萊南華</h2>
+        <img src="photoOther/201801.JPG" alt="">
+        <img src="photoOther/201802.JPG" alt="">
+        <img src="photoOther/201803.JPG" alt="">
+        <img src="photoOther/201805.JPG" alt="">
+        <img src="photoOther/201806.JPG" alt="">
+        <h2>2018 May 台灣琉球國際帆船賽，基隆至日本宮古島，歷時32小時</h2>
+        <img src="photoOther/201809.JPG" alt="">
+        <img src="photoOther/201810.JPG" alt="">
+        <img src="photoOther/201811.JPG" alt="">
+        <img src="photoOther/201812.JPG" alt="">
+        <img src="photoOther/201813.JPG" alt="">
+        <img src="photoOther/201814.JPG" alt="">
+        <img src="photoOther/201815.JPG" alt="">
+        <img src="photoOther/201816.JPG" alt="">
+        <img src="photoOther/201817.JPG" alt="">
+        <img src="photoOther/201818.JPG" alt="">
+        <h2>2018 Jun 澎湖島帆船週系列賽</h2>
+        <img src="photoOther/201819.JPG" alt="">
+        <img src="photoOther/201820.JPG" alt="">
+        <img src="photoOther/201821.JPG" alt="">
+        <img src="photoOther/201822.JPG" alt="">
+        <img src="photoOther/201823.JPG" alt="">
+    </div>
+    <div class="footer">
+        &copy; copyright 2020 by yayar Hsiao<br><br>
+        mail: nnico12341tw@gmail.com
+    </div>
+</div>
 </body>
 </html>
