--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="container">
     <div class="menu">
         <a href="index.html">MENU</a>
         <a href="lora.html">LORA</a>
@@ -17,6 +18,11 @@
         <a href="other.html">OTHER</a>
     </div>
     <h1>RASPBERRYPI</h1>
-    
+
+    <div class="footer">
+        &copy; copyright 2020 by yayar Hsiao<br><br>
+        mail: nnico12341tw@gmail.com
+    </div>
+</div>>    
 </body>
 </html>
