--- a/lora.html
+++ b/lora.html
@@ -20,7 +20,7 @@
 <div id="container">
     <div class="menu">
         <a href="index.html">MENU</a>
-        <a href="lora.html.html">LORA</a>
+        <a href="lora.html">LORA</a>
         <a href="gps.html">GPS</a>
         <a href="lora-gps.html">LORA-application</a>
         <a href="raspberrypi.html">RASPBERRYPI</a>
