--- a/lora.html
+++ b/lora.html
@@ -29,8 +29,8 @@
     <h1>LORA</h1>
     <h2>使用iFrogLab公司LoRa USB dongle gateway產品</h2>
     <div class="content">
-
-        <div class="info">至 <a href="http://www.ifroglab.com/tw/?p=7315">iFrogLab網站</a> 觀看產品細項，並下載 <a href="https://github.com/iFrogLab/IL-LORA1272">官方程式</a> 測試使用。 <br> 至 <a href="https://github.com/StevenChu-ccp/LoRa1272">我的GitHub</a>下載我重整修改程式。
+        <div class="info">
+            至 <a href="http://www.ifroglab.com/tw/?p=7315">iFrogLab網站</a> 觀看產品細項，並下載 <a href="https://github.com/iFrogLab/IL-LORA1272">官方程式</a> 測試使用。 <br> 至 <a href="https://github.com/StevenChu-ccp/LoRa1272">我的GitHub</a>下載我重整修改程式。
         </div>
         <div class="item0">
             <p>這邊使用兩個LoRa USB dongle gateway產品，<br>一個接在Raspberrypi上做傳送端(藍色數字2.)；一個接在Windows系統上做接收端(藍色數字1.)</p>
