--- a/raspberrypi.html
+++ b/raspberrypi.html
@@ -6,6 +6,16 @@
     <title>RASPBERRYPI</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .item{
+            width: 100%;
+            height: 500px;
+            text-align: center;
+            margin-top: 200px;
+            font-family:Brush Script MT, Brush Script Std, cursive;
+            font-size: 100px;
+        }
+    </style>
 </head>
 <body>
 <div id="container">
@@ -18,11 +28,13 @@
         <a href="other.html">OTHER</a>
     </div>
     <h1>RASPBERRYPI</h1>
-
+    <div class="item">
+        continue...
+    </div>
     <div class="footer">
         &copy; copyright 2020 by yayar Hsiao<br><br>
         mail: nnico12341tw@gmail.com
     </div>
-</div>>    
+</div> 
 </body>
 </html>
